# ai-coach

./: .gitignore  CLAUDE.md  INITIAL.md  README.md  benchmark_results.json  check_processed_video.py  copy_processed_videos.py  examine_coordinates.py  generate_pose_videos.py  pyproject.toml  quick_keypoint_check.py  run_server.py  simple_debug.py  simple_rtm_coordinate_test.py  simple_rtm_test.py  test.py  test_3d_visualization.py  test_aspect_ratio_fix.py  test_bbox_visibility.py  test_corrected_coordinates.py  test_demo_visualizer.py  test_detection_enhanced_overlay.py  test_fixed_rtm.py  test_frame_sync_fix.py  test_fresh_analysis.py  test_gpu_encoding.py  test_mmpose_fix.py  test_mmpose_visualizer_fix.py  test_rtm3d_init.py  test_rtm_coordinate_comparison.py  test_rtmpose.py  test_rtmpose3d_integration.py  test_video.html
.claude/: settings.local.json
PRPs/: ai-coach-pose-analysis.md
examples/: mmagic  mmdetection  pose.py  rtmpose3d
model/: .gitignore  README.md
src/: main.py
src/ai_coach/: __init__.py  api.py  coach_agent.py  mmpose_visualizer.py  models.py  pose_3d_visualizer.py  pose_analyzer.py  rtm_pose_analyzer.py  video_processor.py
src/frontend/static/: 3d-viewer.html  app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_coach_agent.py  test_pose_analyzer.py  test_video_processor.py
